# libmath

./: .gitignore  CMakeLists.txt
cmake/: libmath-config.cmake.in  utils.cmake
doc/: Doxyfile
examples/: CMakeLists.txt
examples/cmake/: utils.cmake
examples/differential/: differential.example.cpp
examples/interpolation/: polygone_interpolation.example.cpp
examples/solvers/: las.example.cpp  us.example.cpp
libmath/: arithmetic.h  arithmetic.test.cpp  boolean.h  differential.h  differential.test.cpp  math_exception.h  math_settings.h  matrix.h  matrix.test.cpp
libmath/core/: boolean.h  exception.h  las.h  las.test.cpp  math_exception.h  math_settings.cpp  math_settings.h  matrix.h  matrix.test.cpp  pmatrix.h
libmath/geometry/: edge.h  geometry.test.cpp  node.h  polygone.h
libmath/interpolator/: bilinear_interpolator.h  interpolator.h  interpolator.test.cpp  linear.h  polygone_interpolator.h  triangular_interpolator.h
libmath/solver/: bicgstab.h  lassolver.h  lassolver.test.cpp
libmath/solver/las/: bicgstab.h  kholetsky.h  lassolver.h  lassolver.test.cpp
libmath/solver/us/: secant.h  unlinearsolver.h  unlinearsolver.test.cpp
libmath/triangulator/: triangulator.h  triangulator.test.cpp
tests/: CMakeLists.txt  tests_main.cc
tests/basics/: test_basics.cpp
tests/debug/: test_debug.cpp
